# autonomous-trucking

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
app/: CMakeLists.txt
test/: CMakeLists.txt
